grammar.ebnf
program      ::= { declaration } ;

# Declaration
declaration ::=
    | decl-assign
    | func-decl
    | statement
;
decl-assign ::= ( 'let' | 'const' ) assign ;
assign ::= term-ident [ ':' type-expr ] '=' expression | block ;

# Function
func-decl  ::= 'fun' term-ident ':' '(' { func-arg } ')' '->' type-expr '=' block ;
func-arg  ::= term-ident ':' type-expr ;

# Statements
statement ::=
    | stmt-block
    | stmt-reassign # TODO move assign to expr
    | stmt-if
    | stmt-while
    | expression
;
stmt-block    ::= '{' { declaration } '}';
stmt-reassign ::= assign
stmt-if       ::= 'if'    ((['('] expression [')']) | expression) statement ['else' statement] ;
stmt-while    ::= 'while' ((['('] expression [')']) | expression) statement ;
stmt-for      ::= # TODO

# Types
type-expr     ::= term-optional [ '!' type-optional ] ;
type-optional ::= [ '?' ] term-ident ;
type-func     ::= '(' { type-expr } ')' '->' type-expr ;

# Data
data-struct  ::= 'struct' [ '(' term-ident ')' ] [ term-ident ] '=' '{' { struct-field } '}' ;
struct-field ::= term-ident ':' type-expr { ',' term-ident ':' type-expr } ;

data-enum    ::= 'enum'   [ '(' term-ident ')' ] [ term-ident ] '=' '{' { enum-field } '}' ;
enum-fields  ::= term-ident { ',' term-ident } ;
# Need more reflexion to implement proper algebric type

# Expressions (lower have priority)
expression   ::= expr-or ;
expr-or      ::= expr-and   { 'or' expr-and } ;
expr-and     ::= expr-equal { 'and' expr-equal } ;
expr-equal   ::= expr-add { ('<' | '>' | '==' | '!=' | '<=' | '>=') expr-add } ;
expr-add     ::= expr-mul { ('+' | '-') expr-mul }                             ;
expr-mul     ::= expr-unary { ('*' | '/' | '%') expr-unary }                   ;
expr-unary   ::= { '!' | '-' } expr-unary
             | expr-funcall ;
expr-funcall ::= primary { '(' { funcall-arg } ')' } ;
expr-primary ::= '(' expression ')' | terminal ;

funcall-arg  ::= expression { ',' expression } [ ',' ]


# Terminal
terminal     ::= term-ident | term-string | term-number      ;
term-ident   ::= (alpha | '_') { alpha | digit | '_' | '-' } ;
term-number  ::= [ '-' ] digit { digit }                     ;
term-string  ::= '"' {any} '"'                               ;
